<resources>
    <string name="app_name">MusicVN</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_offline">Offline</string>
    <string name="title_singer">Singer</string>
    <string name="title_gernes">Gernes</string>
    <string name="text_frag4">Frag4</string>
    <string name="text_frag1">Frag1</string>
    <string name="text_frag2">Frag2</string>
    <string name="text_frag3">Frag3</string>
    <string name="string_onclick_item">Put here for next pull request</string>
    <string name="text_favorite_genres">Favourite Genres:</string>
    <string name="error_get_data">Ops ! Error while requesting !</string>
    <string name="text_for_testing">Cuoc Song Em On Khong</string>
    <string name="text_time">00:00</string>
    <string name="text_inform_to_client_permisson">You have already permiss this permission !</string>
    <string name="text_dowloading">Downloading …</string>
    <string name="text_download">Download:</string>
    <string name="text_notification_playing">Playing Music</string>
    <string name="text_inforn_downloaded_song">You have already downloaded this song !</string>
    <string name="title_search">Search</string>
    <string name="text_search_inform">Input song name !</string>
    <string name="text_connection_information">There is no connection</string>
    <string name="text_last_song_if">Last song in list !</string>
    <string name="searching_song_name">Search song name …</string>
    <string name="new_hot"><![CDATA[New & Hot]]></string>
    <string name="top_50_songs">Top 50 songs</string>
    <string name="other_genres">Other genres</string>
    <string name="no_song">Download song and play it offline! </string>
    <string name="enjoy_your_life">Enjoy your time!</string>
    <string name="genre">Genre</string>
    <string name="video_number">%d songs</string>
    <string name="all_music">All Music</string>
    <string name="Audio">Audio</string>
    <string name="alternative_rock">Alternative Rock</string>
    <string name="ambient">Ambient</string>
    <string name="country">Country</string>
    <string name="electronic">Electronic</string>
    <string name="offline_music">Offline Music</string>

    <string name="login_title">ĐĂNG NHẬP</string>
    <string name="login_lable1">Tài Khoản</string>
    <string name="login_username">User Name</string>
    <string name="login_lable2">Password</string>
    <string name="login_pwconfirm">Confirm Password</string>
    <string name="login_btn">Login</string>
    <string name="register_title">TẠO TÀI KHOẢN</string>
    <string name="register_email">Email</string>
    <string name="register_btn">Register</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="message">Message</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="about">About us</string>
    <string name="communicate">Communicate</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
