<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    >

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_banner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/linear_dots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/viewpager_banner"
        />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:fontFamily="@font/roboto_bold_italic"
        android:text="@string/text_favorite_genres"
        android:textColor="@color/color_white_100"
        android:textSize="@dimen/sp_22"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewpager_banner"
        />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_5"
        android:isScrollContainer="false"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintHeight_percent=".65"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        >
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <com.framgia.music_22.utils.custom_view.GenreButton
                android:id="@+id/button_all_song"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_230"
                android:layout_margin="@dimen/dp_11"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                app:genre_avatar="@drawable/all_music"
                app:genre_name="@string/all_music"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".46"
                />
            <com.framgia.music_22.utils.custom_view.GenreButton
                android:id="@+id/button_all_audios"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_230"
                android:layout_margin="@dimen/dp_11"
                android:layout_marginTop="16dp"
                app:genre_avatar="@drawable/all_radio"
                app:genre_name="@string/Audio"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".46"
                />

            <com.framgia.music_22.utils.custom_view.GenreButton
                android:id="@+id/button_alternative_rock"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_230"
                android:layout_margin="@dimen/dp_11"
                android:layout_marginTop="@dimen/dp_16"
                app:genre_avatar="@drawable/genre_alternative"
                app:genre_name="@string/alternative_rock"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_all_song"
                app:layout_constraintWidth_percent=".46"
                />

            <com.framgia.music_22.utils.custom_view.GenreButton
                android:id="@+id/button_ambient"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_230"
                android:layout_margin="@dimen/dp_11"
                android:layout_marginTop="16dp"
                app:genre_avatar="@drawable/genre_ambient"
                app:genre_name="@string/ambient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_all_song"
                app:layout_constraintWidth_percent=".46"
                />

            <com.framgia.music_22.utils.custom_view.GenreButton
                android:id="@+id/button_classic"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_230"
                android:layout_margin="@dimen/dp_11"
                android:layout_marginBottom="@dimen/dp_16"
                android:layout_marginTop="16dp"
                app:genre_avatar="@drawable/genre_country"
                app:genre_name="@string/country"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_alternative_rock"
                app:layout_constraintWidth_percent=".46"
                />

            <com.framgia.music_22.utils.custom_view.GenreButton
                android:id="@+id/button_electronic"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_230"
                android:layout_margin="@dimen/dp_11"
                android:layout_marginBottom="@dimen/dp_16"
                android:layout_marginTop="16dp"
                app:genre_avatar="@drawable/genre_electronic"
                app:genre_name="@string/electronic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_alternative_rock"
                app:layout_constraintWidth_percent=".46"
                />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>
