<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageButton
            android:id="@+id/button_trending"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:background="?android:selectableItemBackground"
            android:foreground="@drawable/border_iamge_button"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:srcCompat="@drawable/ic_top"
            />
        <ImageButton
            android:id="@+id/button_hot"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:layout_marginLeft="@dimen/dp_50"
            android:background="?android:selectableItemBackground"
            android:foreground="@drawable/border_iamge_button"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toRightOf="@+id/button_trending"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_trending"
            />
        <TextView
            android:id="@+id/text_trend"
            android:layout_width="@dimen/dp_120"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_hot"
            android:textColor="@color/color_grey_400"
            android:textSize="@dimen/sp_18"
            app:layout_constraintLeft_toLeftOf="@+id/button_trending"
            app:layout_constraintTop_toBottomOf="@+id/button_trending"
            />
        <TextView
            android:id="@+id/top_50"
            android:layout_width="@dimen/dp_120"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/top_50_songs"
            android:textColor="@color/color_grey_400"
            android:textSize="@dimen/sp_18"
            app:layout_constraintLeft_toLeftOf="@+id/button_hot"
            app:layout_constraintTop_toBottomOf="@+id/button_hot"
            />
    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_3"
        android:layout_margin="@dimen/dp_20"
        android:background="@color/color_green_90"
        app:layout_constraintTop_toBottomOf="@+id/constraint_header"
        />

    <TextView
        android:id="@+id/text_genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_genres"
        android:textColor="@color/color_white_100"
        android:textSize="@dimen/sp_18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line"
        />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_5"
        android:isScrollContainer="false"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintHeight_percent=".6"
        app:layout_constraintTop_toBottomOf="@id/text_genres"
        >
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageButton
                android:id="@+id/button_country"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_120"
                android:layout_margin="@dimen/dp_10"
                android:background="?android:selectableItemBackground"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/genre_country"
                />
            <ImageButton
                android:id="@+id/button_dancehall"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_120"
                android:layout_margin="@dimen/dp_10"
                android:background="?android:selectableItemBackground"
                android:scaleType="fitXY"
                app:layout_constraintTop_toBottomOf="@+id/button_country"
                app:srcCompat="@drawable/genre_dace_hall"
                />
            <ImageButton
                android:id="@+id/button_danceedm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_120"
                android:layout_margin="@dimen/dp_10"
                android:background="?android:selectableItemBackground"
                android:scaleType="fitXY"
                app:layout_constraintTop_toBottomOf="@+id/button_dancehall"
                app:srcCompat="@drawable/genre_edm"
                />
            <ImageButton
                android:id="@+id/button_deephouse"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_120"
                android:layout_margin="@dimen/dp_10"
                android:background="?android:selectableItemBackground"
                android:scaleType="fitXY"
                app:layout_constraintTop_toBottomOf="@+id/button_danceedm"
                app:srcCompat="@drawable/genre_deep_house"
                />
            <ImageButton
                android:id="@+id/button_disco"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_120"
                android:layout_margin="@dimen/dp_10"
                android:background="?android:selectableItemBackground"
                android:scaleType="fitXY"
                app:layout_constraintTop_toBottomOf="@+id/button_deephouse"
                app:srcCompat="@drawable/genre_disco"
                />
            <ImageButton
                android:id="@+id/button_piano"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_120"
                android:layout_margin="@dimen/dp_10"
                android:background="?android:selectableItemBackground"
                android:scaleType="fitXY"
                app:layout_constraintTop_toBottomOf="@+id/button_disco"
                app:srcCompat="@drawable/genre_piano"
                />
            <ImageButton
                android:id="@+id/button_pop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_120"
                android:layout_margin="@dimen/dp_10"
                android:background="?android:selectableItemBackground"
                android:scaleType="fitXY"
                app:layout_constraintTop_toBottomOf="@+id/button_piano"
                app:srcCompat="@drawable/genre_pop"
                />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>
